# dbx-fetch-benchmarks

./: .env.example  .gitignore  README.md  pyproject.toml
common/python/: helpers.py
common/r/: helpers.R
queries/: scenarios.json
report/: benchmark_report.qmd
results/: README.md  iterations.csv  summary.csv
runners/python-adbc/: README.md  run.py
runners/python-external-duckdb/: README.md  run.py
runners/python-jdbc/: README.md  run.py
runners/python-odbc/: README.md  run.py
runners/python-sharing-client/: README.md  run.py
runners/python-sharing-client-hack/: README.md  run.py
runners/python-sql-connector/: README.md  run.py
runners/python-volume-download/: README.md  run.py
runners/r-adbc/: README.md  run.R
runners/r-brickster-sql/: README.md  run.R
runners/r-jdbc/: README.md  run.R
runners/r-odbc/: README.md  run.R
scripts/: download_sql_drivers.sh  run_all.sh  setup_external_clients.py
